src/objects/DCA_Member__c.object
<CustomObject>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <label>Public Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>UserRole</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DCA Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DCA Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DCA Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>